testing/Travis/testcases/prototype/shouldSucceed/Issue766.adl
CONTEXT "Issue 766" IN ENGLISH

  CLASSIFY Datatype ISA Class
  
  subClassOf        :: Class * Class [IRF,ASY]
  baseDatatype      :: Datatype * Datatype [UNI]
  
  RULE subClassOf;baseDatatype |- baseDatatype
  VIOLATION (TXT "some text ", SRC I[Datatype], TXT " other text ", SRC subClassOf)
  

ENDCONTEXT